k8s/clusters/headlamp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: headlamp
spec:
  selector:
    app: headlamp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
